@startuml

title __TUTORIAL's Class Diagram__\n

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialActivity {
          + onOptionsItemSelected()
          + onWindowFocusChanged()
          # onCreate()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialPage {
          - layoutId : int
          + onCreateView()
          ~ TutorialPage()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialPageLast {
          + TutorialPageLast()
          + onCreateView()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialPagerAdapter {
          {static} - TAG : String
          - fragmentList : List<Fragment>
          + getCount()
          + getItem()
          ~ TutorialPagerAdapter()
      }
    }
  }
  

  com.example.sickar.tutorial.TutorialActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.sickar.tutorial.TutorialPage -up-|> androidx.fragment.app.Fragment
  com.example.sickar.tutorial.TutorialPageLast -up-|> androidx.fragment.app.Fragment
  com.example.sickar.tutorial.TutorialPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
